--- a/web/assets/v2/less/main-en-us.less
+++ b/web/assets/v2/less/main-en-us.less
@@ -110,6 +110,11 @@
 
 .course-detail-header {
   .course-img {
+    .tags {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
     .tag-serialing,
     .tag-live,
     .tag-finished {
