--- a/web/assets/v2/css/main-en-us.css
+++ b/web/assets/v2/css/main-en-us.css
@@ -14141,6 +14141,11 @@ textarea {
   background: url("../img/en-us/tag_recommend.png") no-repeat;
   background-image: -webkit-image-set(url("../img/en-us/tag_recommend.png") 1x, url("../img/en-us/tag_recommend@2x.png") 2x);
 }
+.course-detail-header .course-img .tags {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 .course-detail-header .course-img .tag-serialing,
 .course-detail-header .course-img .tag-live,
 .course-detail-header .course-img .tag-finished {
