--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/llquickpay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/llquickpay.html.twig
@@ -4,10 +4,14 @@
     <div class="col-md-3 control-label">
       <label>接口状态</label>
     </div>
-    <div class="controls col-md-8 radios">
+    <div class="controls col-md-3 radios">
       {{ radios('llquickpay_enabled', {1:'开启', 0:'关闭'}, payment.llquickpay_enabled) }}
     </div>
+     <div class="controls col-md-4 radios">
+        <a href="http://www.edusoho.com/files/ll.zip">下载接口申请说明文档</a>
+      </div>
   </div>
+
   <div class="form-group">
     <div class="col-md-3 control-label">
       <label for="llquickpay_key">商户账号</label>
