--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/live-open-course-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/live-open-course-header.html.twig
@@ -1,4 +1,4 @@
-<img src="{{ filepath(course.largePicture, 'course.png')}}" class="img-responsive mask-img">
+{#<img src="{{ filepath(course.largePicture, 'course.png')}}" class="img-responsive mask-img">#}
 {% if lesson is empty or lesson.startTime is empty or lesson.endTime is empty %}
   <div class="mask">
     <div class="modal-dialog" style="width:200px;margin:22% auto;">
@@ -12,7 +12,7 @@
   </div>
 {% else %}
   {% set refererUrl = app.request.server.get('HTTP_REFERER') %}
-  <div class="mask">
+  <div class="mask live-header-mask">
   {% if lesson.startTime > ("now"|date("U")) %}
     <div class="mask-content">
       <h2>{{'直播将于'|trans}}<span class="phm">{{ lesson.startTime|date('m') }}{{ '月'|trans }}{{ lesson.startTime|date('d') }}{{ '日'|trans }} {{ lesson.startTime|date('H:i') }}</span>{{'开始'|trans}}</h2>
@@ -52,7 +52,7 @@
     <div class="mask-content">
       <h2>{{'直播已经结束'|trans}}</h2>
       {% if lesson.replayStatus == 'videoGenerated' %}
-        <button class="btn btn-info btn-lg mask-btn">{{'查看回放'|trans}}</button>
+        <button class="btn btn-info btn-lg mask-btn live-video-replay-btn">{{'查看回放'|trans}}</button>
       {% elseif lesson.replayStatus == 'generated' %}
         {% for replay in lesson.replays if replay %}
           <a class="btn btn-info btn-lg mask-btn" href="{{ path('live_open_course_live_replay_entry',{courseId:lesson.courseId,lessonId:lesson.id,replayId:replay.id, refererUrl:refererUrl}) }}" target="_blank">{{'查看回放'|trans}}</a>
@@ -63,4 +63,7 @@
     </div>
   {% endif %}
   </div>
+  {% if lesson.endTime < ("now"|date("U")) and lesson.replayStatus == 'videoGenerated' %}
+    {% include 'TopxiaWebBundle:OpenCourse:lesson-play.html.twig' %}
+  {% endif %}
 {% endif %}
