添加客户端显示

--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -47,6 +47,7 @@
               <span class="icon"></span>
             </div>
             {% else %}
+            {{dump(isMobile)}}
                 {% if isMobile and payment != 'llcbpay' or payment != 'heepay' %}
                   <div class="check {% if payment == activePayment %} active {% endif %}" id="{{payment}}">
                     {% set picture = 'assets/img/order/'~payment~'.png' %}
