添加移动端不显示

--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -27,6 +27,7 @@
       <form class="form-paytype" method="post" action="{{path('pay_center_pay')}}">
         <input type="hidden" name="targetType" value="{{order.targetType}}">
         <input type="hidden" name="orderId" value="{{order.id}}"/>
+
         
         {% set activePayment = order.payment %}
         {% for payment,options in payments %}
@@ -47,14 +48,13 @@
               <span class="icon"></span>
             </div>
             {% else %}
-            {{dump(isMobile)}}
-                {% if isMobile and payment != 'llcbpay' and payment != 'heepay' %}
-                  <div class="check {% if payment == activePayment %} active {% endif %}" id="{{payment}}">
-                    {% set picture = 'assets/img/order/'~payment~'.png' %}
-                    <img src="{{ asset(picture) }}" />
-                    <span class="icon"></span>
-                  </div>
-                {% endif %}
+              {% if isMobile and pament != 'llcbay' and pament != 'heepay' %}
+                <div class="check {% if payment == activePayment %} active {% endif %}" id="{{payment}}">
+                  {% set picture = 'assets/img/order/'~payment~'.png' %}
+                  <img src="{{ asset(picture) }}" />
+                  <span class="icon"></span>
+                </div>
+              {% endif %}
             {% endif %}
           {% else %}
             <div class="pay-type-label text-warning ">{{'支付方式未开启，请联系管理员。'|trans}}</div>
