添加关闭所有支付判断

--- a/src/Topxia/AdminBundle/Resources/views/System/payment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/payment.html.twig
@@ -41,6 +41,7 @@
     </div>
   </div>
   <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
+  <input type="hidden" name="closePayment" value="{{ path('admin_setting_payment_close') }}">
 </form>
 
 {% endblock %}
