finished admin bundle 1-1000 line translation

--- a/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/magic.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/magic.html.twig
@@ -41,7 +41,7 @@
       <li>{{ '是否开启云搜索业务：'|trans }} {% verbatim %}"cloud_search": 0{% endverbatim %}（{{ '１为启用'|trans }}，{{ '０为关闭'|trans }}）</li>
       <li>{{ '是否关闭iOS购买功能：'|trans }} {% verbatim %}"ios_buy_disable": 0{% endverbatim %}（{{ '１为关闭'|trans }}，{{ '０为开启'|trans }}）</li>
       <li>{{ '订单单次导出数量：'|trans }} {% verbatim %}"export_limit": 10000{% endverbatim %}（{{ '建议最大值不超过20000'|trans }}）</li>
-      <li>{{ '订单导出允许的最数量：'|trans }} {% verbatim %}"export_allow_count": 100000{% endverbatim %}（{{ '建议最大值不超过200000'|trans }}）</li>
+      <li>{{ '订单导出允许的最大数量：'|trans }} {% verbatim %}"export_allow_count": 100000{% endverbatim %}（{{ '建议最大值不超过200000'|trans }}）</li>
       <li>{{ '是否开启组织机构：'|trans }} {% verbatim %}"enable_org": 0{% endverbatim %}（{{ '0为关闭'|trans }}，{{ '1为启用'|trans }}）</li>
       <li>{{ '是否显示快捷支付：'|trans }} {% verbatim %}"quickpay": false{% endverbatim %}（{{ 'false为关闭'|trans }}，{{ 'true为开启'|trans }}）</li>
     </ul>
