作业答题页无云附件

--- a/src/Topxia/WebBundle/Resources/views/Question/question-choice-doing.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Question/question-choice-doing.html.twig
@@ -5,6 +5,7 @@
   {% elseif question.type == 'choice' %}{{'（多选）'|trans}}
   {% endif %}
 {{ question.stem|bbCode2Html|raw }}
+{{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.stem', targetId: question.id })) }}
 {% endblock %}
 
 {% block body %}
