--- a/src/Topxia/WebBundle/Resources/views/Question/question-determine-doing.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Question/question-determine-doing.html.twig
@@ -2,6 +2,7 @@
 
 {% block heading %}
   {{ question.stem|bbCode2Html|raw }}
+  {{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'question.stem', targetId: question.id })) }}
 {% endblock %}
 
 {% block body %}
