--- a/src/Topxia/WebBundle/Resources/views/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/layout.html.twig
@@ -80,9 +80,9 @@
     {% endif %}
   {% endblock %}
 
-  <div id="modal" class="modal"></div>
   <div id="login-modal" class="modal" data-url="{{ path('login_ajax') }}"></div>
-
+  <div id="modal" class="modal"></div>
+  <div id="attachment-modal" class="modal"></div>
 {% endblock %}
 
 {% include 'TopxiaWebBundle::script_boot.html.twig' with {script_main: asset('bundles/topxiaweb/js/app.js')} %}
