--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -47,7 +47,10 @@
               <span class="icon"></span>
             </div>
             {% else %}
-            <div class="check {% if payment == activePayment %} active {% endif %}{% if payment == 'llcbpay' or payment == 'heepay' %}hidden-xs{% endif %}" id="{{payment}}">
+            {% if isMobile and pament == 'heepay' and pament ==  'llcbpay' %}
+            <p class="color-danger">移动端不支持网银支付。</p>
+            {% endif %}
+            <div class="check {% if payment == activePayment %} active {% endif %} {% if isMobile and pament == 'heepay' and pament ==  'llcbpay' %}disabled{% endif %}" id="{{payment}}">
               {% set picture = 'assets/img/order/'~payment~'.png' %}
               <img src="{{ asset(picture) }}" />
               <span class="icon"></span>
