修复部分输入框无法隐藏，以及校验问题

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
@@ -69,7 +69,7 @@
                              </label>
                          </div>
                      </div>
-                     <div class="form-group">
+                     <div class="form-group attachement_detail">
                          <div class="col-md-3 control-label">
                              <label for="fileSize">附件大小</label>
                          </div>
