添加trans函数和修复bug

--- a/src/Topxia/AdminBundle/Resources/views/Course/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/index.html.twig
@@ -26,7 +26,7 @@
       {% if filter == 'normal' %}
       <div class="form-group">
         <select style="max-width:150px;" class="form-control" name="chargeStatus">
-          {{ select_options({free:'免费课程',charge:'收费课程'}, app.request.get('chargeStatus'), '收费状态'|trans) }}
+          {{ select_options({free:'免费课程'|trans,charge:'收费课程'|trans}, app.request.get('chargeStatus'), '收费状态'|trans) }}
         </select>
       </div>
       {% endif %}
