--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
@@ -336,7 +336,7 @@
                 <tr>
                   <td rowspan="9" style="text-align:center;vertical-align:middle;font-size:18px;">{{ '教务通知'|trans }}
                   </td>
-                  <td>{{ '新%classroomName%发布'|trans({'%classroomName%': setting('classroom.name')|default({'班级'|trans})}) }} }}</td>
+                  <td>{{ '新%classroomName%发布'|trans({'%classroomName%': setting('classroom.name')|default('班级'|trans)}) }}</td>
                   <td>
                     5
                     <span class="glyphicon glyphicon-question-sign text-muted pull-right" id="article-property-tips5"
