--- a/src/Topxia/AdminBundle/Resources/views/Group/set.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Group/set.html.twig
@@ -18,7 +18,7 @@
             </div>
 
            <div class="row form-group">
-              <div class="col-md-2 control-label" style="white-space:nowrap;">
+              <div class="col-md-2 control-label">
                 <label >{{'最热话题的时间范围'|trans}}</label>
               </div>
               <div class="controls col-md-7 radios">
