--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -29,6 +29,8 @@
         <input type="hidden" name="orderId" value="{{order.id}}"/>
         
         {% set activePayment = order.payment %}
+        {% set cbpay = false %}
+        {% set alipay = false %}
         {% for payment,options in payments %}
           {% if ( not is_micro_messenger() and activePayment == 'none' ) 
             or (is_micro_messenger() and activePayment in ['none', 'alipay'] and not (payment == 'alipay')) %}
@@ -85,8 +87,6 @@
             </ul>
           </div>
           {% endif %}
-          {{dump(alipay)}}
-          {{dump(cbpay)}}
           {% if alipay|default('') or cbpay|default('') %}
               <p class="color-danger">如需使用{% if alipay|default('') %}支付宝{% endif %}{% if alipay|default('') and cbpay|default('') %}或{% endif %}{% if cbpay|default('') %}网银{% endif %}支付，请在其他浏览器中重新下单。<a id='copy' class="hidden" href='javascript:;'>复制地址</a></p>
           {% endif %}
