--- a/src/Topxia/WebBundle/Resources/views/LiveCourseReplayManage/file-chooser.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/LiveCourseReplayManage/file-chooser.html.twig
@@ -62,6 +62,7 @@
 
 .balloon-uploader-body {
   position: relative;
+
 }
 
 .balloon-filelist .file-name,
@@ -101,6 +102,7 @@
   max-height: 300px;
   overflow-y: scroll;
 }
+
 
 .balloon-filelist ul li {
   position: relative;
@@ -165,7 +167,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
+  right: -40px;
   bottom: 0;
 }
 
@@ -178,85 +180,96 @@
 
 </style>
 
-{% set showCourseMaterialPane = showCourseMaterialPane|default(1) %}
 {% set courseType = courseType|default('course') %}
+{% if course.type in ['open','liveOpen'] %}
+  {% set courseMaterialUrl = 'open_course_manage_material_browser' %}
+{% else %}
+  {% set courseMaterialUrl = 'course_manage_material_browser' %}
+{% endif %}
 
-<div class="file-chooser">
-  <div class="file-chooser-bar" style="display:none;">
-    <span data-role="placeholder"></span>
-    <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> {{'重新选择'|trans}}</button>
-  </div>
+{% set lesson = lesson|default(null) %}
+<div id="media-choosers">
 
-  <div class="file-chooser-main">
-    <ul class="nav nav-pills nav-pills-sm mbs file-chooser-tabs">
-      <li><a class="file-chooser-uploader-tab" href="#file-chooser-upload-pane" data-toggle="tab">{{'上传文件'|trans}}</a></li>
-      <li><a href="#file-chooser-browser-pane" data-toggle="tab">{{'从资料库中选择'|trans}}</a></li>
-      {% if showCourseMaterialPane %}
-        <li><a href="#file-chooser-course-pane" data-toggle="tab">{{'从课程文件中选择'|trans}}</a></li>
-      {% endif %}
-    </ul>
-    <div class="tab-content">
-      <div class="tab-pane" id="file-chooser-upload-pane">
-        {% set token = uploader_token(targetType, course.id, 'private') %}
-        <div class="balloon-uploader" id="batch-uploader"
-          data-init-url="{{ path('uploader_init', {token:token}) }}"
-          data-finish-url="{{ path('uploader_finished', {token:token}) }}"
-          data-upload-auth-url = "{{ path('uploader_auth', {token:token}) }}"
-          data-accept="{{ uploader_accept(targetType)|json_encode }}"
-          data-process="{{ uploader_process(targetType) }}"
-        >
-          <div class="balloon-uploader-heading">上传文件</div>
-          <div class="balloon-uploader-body">
-            <div class="balloon-nofile">请将文件拖到这里，或点击添加文件按钮</div>
-            <div class="balloon-filelist">
-              <div class="balloon-filelist-heading">
-                <div class="file-name">文件名</div>
-                <div class="file-size">大小</div>
-                <div class="file-status">状态</div>
-              </div>
+  <div class="file-chooser" id="video-chooser"
+    data-targetType="{{targetType}}"
+    data-targetId="{{targetId}}"
+  >
+    <div class="file-chooser-bar" style="display:none;">
+      <span data-role="placeholder"></span>
+      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> 编辑</button>
+      <div class="alert alert-warning" data-role="waiting-tip" style="display:none;">正在转换视频格式，转换需要一定的时间，期间将不能播放该视频。<br />转换完成后将以站内消息通知您。</div>
+    </div>
+
+    <div class="file-chooser-main">
+      <ul class="nav nav-pills nav-pills-sm mbs file-chooser-tabs">
+        <li><a class="file-chooser-uploader-tab" href="#video-chooser-upload-pane" data-toggle="tab">上传视频</a></li>
+        <li>
+          <a href="#video-chooser-disk-pane" data-toggle="tab">
+            从资料库中选择
+          </a>
+        </li>
+
+        <li>
+          <a href="#video-chooser-course-file" data-toggle="tab">
+            从课程文件中选择
+          </a>
+        </li>
+
+      </ul>
+      <div class="tab-content">
+        <div class="tab-pane active" id="video-chooser-upload-pane">
+
+          <div class="file-chooser-uploader">
+            {% include 'TopxiaWebBundle:CloudFile:video-quality-switcher.html.twig' %}
+
+            {% set token = uploader_token(targetType, targetId, 'private') %}
+            <div class="balloon-uploader"
+              data-init-url="{{ path('uploader_init', {token:token}) }}"
+              data-finish-url="{{ path('uploader_finished', {token:token}) }}"
+              data-upload-auth-url = "{{ path('uploader_auth', {token:token}) }}"
+              data-accept="{{ uploader_accept(targetType, 'video')|json_encode }}"
+              data-process="{{ uploader_process(targetType) }}"
+            ></div>
+
+
+            <div class="alert alert-info">
               <ul>
+                {% if setting('storage.upload_mode') == 'cloud' %}
+                  <li>支持<strong>mp4, avi, flv, f4v, wmv, mov, rmvb, mkv, m4v</strong>格式的视频文件上传，文件大小不能超过<strong>2 GB</strong>。</li>
+                  <li>支持<strong>断点续传</strong>（仅支持HTML5浏览器）。</li>
+                  <li>视频将上传到<strong>云视频服务器</strong>，上传之后会对视频进行格式转换，转换过程需要一定的时间，在这个过程中视频将无法播放。</li>
+                {% else %}
+                  <li>支持<strong>mp4</strong>格式的视频文件上传，文件大小不能超过<strong>{{ upload_max_filesize() }} </strong>。MP4文件的视频编码格式，请使用AVC(H264)编码，否则浏览器无法播放。</li>
+                  <li>
+                    视频将上传到<strong>网站服务器</strong>。如需使用{{ 'EduSoho'|copyright_less }}云视频,点击<a href="http://open.edusoho.com/show/cloud/video" target="_blank">这里</a>了解详情,{{ 'EduSoho'|copyright_less }}云视频将为您提供稳定、安全、经济、便捷的视频托管服务以及优质的视频播放体验。
+                  </li>
+                {% endif %}
               </ul>
             </div>
+
           </div>
-          <div class="balloon-uploader-footer">
-            <div class="file-pick-btn"><i class="glyphicon glyphicon-plus"></i> 添加文件</div>
-            <div class="start-upload-btn"><i class="glyphicon glyphicon-upload"></i> 开始上传</div>
-          </div>
+
         </div>
-      </div>
-      
-      <div class="tab-pane" id="file-chooser-browser-pane">
-        <div id="file-browser" data-role="file-browser"
-          data-base-url="{{ path('uploadfile_browser') }}"
-          data-default-url="{{ path('uploadfile_browser', {source:'upload'}) }}"
-          data-my-sharing-contacts-url="{{ path('material_lib_my_sharing_contacts') }}"
-         data-empty="{{'暂无文件，请先上传。'|trans}}">
-          <div class="file-browser-list-container"></div>
+        <div class="tab-pane" id="video-chooser-disk-pane">
+            <div id="file-browser-video" data-role="file-browser"
+            data-base-url="{{ path('uploadfile_browser', {type:'video'}) }}"
+            data-default-url="{{ path('uploadfile_browser', {type:'video', source:'upload'}) }}"
+            data-my-sharing-contacts-url="{{ path('material_lib_my_sharing_contacts') }}"
+            data-empty="暂无视频文件，请先上传。">
+              <div class="file-browser-list-container"></div>
+            </div>
         </div>
-      </div>
 
-      {% if course.type in ['open','liveOpen'] %}
-        {% set materialBrowserUrl = path('open_course_manage_material_browser', {courseId:targetId,courseType:courseType}) %}
-      {% else %}
-        {% set materialBrowserUrl = path('course_manage_material_browser', {courseId:targetId,courseType:courseType}) %}
-      {% endif %}
-      <div class="tab-pane" id="file-chooser-course-pane">
-          <div id="file-browser" data-role="course-file-browser"
-            data-url="{{ materialBrowserUrl }}"
-            data-empty="{{'暂无文件，请先上传。'|trans}}">
-          </div>
-      </div>
-
-      <div class="tab-pane" id="file-chooser-link-pane">
-
-        <div class="form-group" style="margin-bottom:0px;">
-          <div class="col-md-12 controls">
-            <input type="text" class="form-control" name="link" placeholder="{{'资料链接地址'|trans}}">
-            <div class="help-block"></div>
-          </div>
+        <div class="tab-pane" id="video-chooser-course-file">
+            <div id="file-browser-video" data-role="course-file-browser"
+            data-url="{{ path(courseMaterialUrl, {courseId:targetId, type:'video', courseType:courseType}) }}"
+            data-empty="暂无视频文件，请先上传。">
+            </div>
         </div>
 
       </div>
     </div>
+
   </div>
+
 </div>
