云附件上传的弹出框隐藏视频转码类型

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
@@ -76,7 +76,7 @@
                          <div class="col-md-8 controls">
                              <input type="text" id="fileSize" name="fileSize" class="form-control width-input-large mrm" style="display:inline-block"
                                     value="{{ attachment.fileSize }}">MB
-                             <p class="help-block">当前服务器文件上限为2048MB</p>
+                             <p class="help-block">当前服务器附件大小上限为2048MB</p>
                          </div>
                      </div>
                      <div class="row form-group">
