--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -31,7 +31,7 @@
         {% set activePayment = order.payment %}
         {% set cbpay = false %}
         {% set alipay = false %}
-        {% set other = false %}
+          {% set alipay = false %}
         {% for payment,options in payments %}
           {% if ( not is_micro_messenger() and activePayment == 'none' ) 
             or (is_micro_messenger() and activePayment in ['none', 'alipay'] and not (payment == 'alipay')) %}
@@ -44,9 +44,13 @@
           {% for payment, options in payments %}
             {% if isMobile and payment == 'heepay' or isMobile and payment ==  'llcbpay' %}
               {% set cbpay = true %}
+            {% else if payment == 'alipay' and is_micro_messenger() %}
+              {% set alipay = true %}
+            {% else %}
+               {% set other = true %}
             {% endif %}
             {% if payment == 'alipay' and is_micro_messenger() %}
-              {% set alipay = true %}
+              
             <div class="check disabled">
               {% set picture = 'assets/img/order/'~payment~'.png' %}
               <img src="{{ asset(picture) }}" />
@@ -58,9 +62,6 @@
               <img src="{{ asset(picture) }}" />
               <span class="icon"></span>
             </div>
-            {% endif %}
-            {% if cbpay|default('') and alipay|default('') %}
-            {% set other = payment %}
             {% endif %}
           {% else %}
             <div class="pay-type-label text-warning ">{{'支付方式未开启，请联系管理员。'|trans}}</div>
@@ -102,7 +103,7 @@
           {% if targetType in ['course', 'classroom', 'vip'] %}
             {% include 'TopxiaWebBundle:PayCenter:' ~ targetType ~ '-cancelled.html.twig' %}
           {% endif %}
-          <button class="pay-button btn btn-primary {% if other|default('') is sameas(false) %}disable{% endif %}"  type="submit">{{'确认支付'|trans}}</button>
+          <button class="pay-button btn btn-primary{% if other|default('') is sameas(false) %}disable{% endif %}"  type="submit">{{'确认支付'|trans}}</button>
         </div>
       </form>
     </div>
