--- a/src/Topxia/AdminBundle/Resources/views/Category/modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Category/modal.html.twig
@@ -30,7 +30,7 @@
 		</div>
 
 		<div class="form-group">
-			<label class="col-md-2 control-label" for="category-description-field">分类描述</label>
+			<label class="col-md-2 control-label" for="category-description-field">{{ '分类描述'|trans }}</label>
 			<div class="col-md-8 controls">
 				<textarea class="form-control" id="category-description-field" style="height:100px;" name="description">{{category.description}}</textarea>
 				<div class="help-block">{{'非必填'|trans}}</div>
