--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-attachment.html.twig
@@ -7,13 +7,13 @@
                 <div class="text-center">
                   <div class="error-content" style="padding: 100px 100px">
                     <h4>
-                      您尚未开通云视频服务，无法使用云附件功能，
+                      您尚未开通云视频服务，无法使用云附件管理功能，
                       <a href={{path('admin_setting_cloud_video')}}>立即开通</a>
                       或
                       <a href="http://open.edusoho.com/show/cloud/video" target="_blank">了解云视频</a>
                     </h4>
                     <p>
-                    “云附件”提供完善的附件功能，满足讨论区，小组，资讯，试题等多种场景的附件上传，让学习，互动，更加完整丰富。
+                   “云附件管理”提供完善的附件资源管理功能，您可以从附件的使用途径、上传时间、资源类型等多个维度对资源进行管理， 帮助您轻松掌控全站的附件资源，再也不用担心过期资源占用存储空间了
                     </p>
                   </div>
                 </div>
