--- a/src/Topxia/WebBundle/Resources/views/Attachment/item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/item.html.twig
@@ -5,6 +5,9 @@
   	{% set can_preview_type = attachment.file.type in ['video', 'audio', 'ppt', 'document', 'image', 'flash'] %}
   		
   	{% set can_preview = attachment.file.type in ['video', 'ppt', 'document'] and attachment.file.processStatus == "ok" %}
+    {% if can_preview_type and (not can_preview) %}
+       {% set can_preview = attachment.file.type in ['audio', 'image', 'flash'] %}    
+    {% endif %}
   	{% if not (can_preview_type and can_preview )%}   
   		<a  class="attachment-preview color-gray"  href="javascript:;" data-toggle="tooltip" data-placement="top" title="
   		{% if not can_preview_type %}文件类型暂不支持预览 {% else %} 转码中请稍后预览{% endif %}">预览</a>
