--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -56,9 +56,10 @@
               <span class="icon"></span>
             </div>
             {% else %}
-            {{dump(payment)}}
+
             <div class="check{% if payment == activePayment %} active {% endif %} {% if isMobile and payment == 'heepay' or isMobile and payment ==  'llcbpay' %}disabled{% endif %}" id="{{payment}}">
               {% set picture = 'assets/img/order/'~payment~'.png' %}
+              {{dump(picture)}}
               <img src="{{ asset(picture) }}" />
               <span class="icon"></span>
             </div>
