--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/picture-crop.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/picture-crop.html.twig
@@ -14,7 +14,7 @@
 
     <div class="form-group clearfix">
       <div class="col-md-offset-2 col-md-8 controls">
-        <img src="{{ filepath(pictureUrl) }}" id="classroom-picture-crop" width="{{scaledSize.width}}" height="{{scaledSize.height}}" data-natural-width="{{ naturalSize.width }}" data-natural-height="{{ naturalSize.height }}" />
+        <img class="img-responsive" src="{{ filepath(pictureUrl) }}" id="classroom-picture-crop" width="{{scaledSize.width}}" height="{{scaledSize.height}}" data-natural-width="{{ naturalSize.width }}" data-natural-height="{{ naturalSize.height }}" />
         <div class="help-block">提示：请选择图片裁剪区域。</div>
       </div>
     </div>
